--- a/admin_interface.html
+++ b/admin_interface.html
@@ -14,7 +14,7 @@
 	integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
 	crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+<body onload="loadDashboard()">
 	<header id="header">
 		<a href="../index.html" id="logo"> Aarogya Healthcare </a>
 
@@ -30,37 +30,37 @@
 	<main id="main">
 		<div id="sidebar">
 
-			<div class="sidebar-options">
+			<div class="sidebar-options" onclick="loadDashboard()">
 				<i class="fa-solid fa-house-chimney"></i>
 				<p>Dashboard</p>
 			</div>
 
-			<div class="sidebar-options">
+			<div class="sidebar-options" onclick="loadDoctorList()">
 				<i class="fa-solid fa-user-doctor"></i>
 				<p>Doctor List</p>
 			</div>
 
-			<div class="sidebar-options">
+			<div class="sidebar-options" onclick="loadAddDoctor()">
 				<i class="fa-solid fa-hand-holding-medical"></i>
 				<p>Add Doctor</p>
 			</div>
 
-			<div class="sidebar-options">
+			<div class="sidebar-options" onclick="loadPatientList()">
 				<i class="fa-solid fa-user"></i>
 				<p>Patient List</p>
 			</div>
 
-			<div class="sidebar-options">
+			<div class="sidebar-options" onclick="loadAddPatient()">
 				<i class="fa-solid fa-user-plus"></i>
 				<p>Add Patient</p>
 			</div>
 
-			<div class="sidebar-options">
+			<div class="sidebar-options" onclick="loadAppointments()">
 				<i class="fa-solid fa-kit-medical"></i>
 				<p>Appointments</p>
 			</div>
 
-			<div class="sidebar-options">
+			<div class="sidebar-options" onclick="loadQueries()">
 				<i class="fa-solid fa-clipboard-question"></i>
 				<p>Queries</p>
 			</div>
@@ -70,33 +70,7 @@
 		<div id="right-body"></div>
 	</main>
 
-	<script>
-	  //Sets the main tag margin-top offset 
-	  let main = document.getElementById("main");
-	  let header = document.getElementById("header");
-	  window.addEventListener("load", function () {
-	    let header_height = header.offsetHeight;
-	    main.style.marginTop = header_height + "px";
-	  });
-	
-	  window.addEventListener("resize", function () {
-	    let header_height = header.offsetHeight;
-	    main.style.marginTop = header_height + "px";
-	  });
-	
-	
-	
-	  //Loads the Queries into the webpage 
-	  let right_body = document.getElementById("right-body");
-	  fetch('adminDashboard.jsp')
-	    .then(response => response.text())
-	    .then(data => {
-	      right_body.innerHTML = data;
-	    })
-	    .catch(error => {
-	      console.error('Error:', error);
-	    });
-
-  </script>
+	<script src="admin_interface.js" defer></script>   
+   
 </body>
 </html>
