--- a/Aarogya_Healthcare(NEW)/Aarogya_Healthcare/src/main/webapp/admin-interface/admin_interface.html
+++ b/Aarogya_Healthcare(NEW)/Aarogya_Healthcare/src/main/webapp/admin-interface/admin_interface.html
@@ -20,15 +20,15 @@
 
 		<nav>					
 			<div class="search-filter">			
-				<textarea type="text" id="search-filter" placeholder="Search Email Address..."></textarea>									
+				<textarea id="search-filter" placeholder="Search Email Address..."></textarea>									
 			</div>
 			
 			<div class="search-user-filter">			
-				<textarea type="text" id="search-user-filter" placeholder="Search Patient Email..."></textarea>								
+				<textarea id="search-user-filter" placeholder="Search Patient Email..."></textarea>								
 			</div>
 			
 			<div class="search-doctor-filter">			
-				<textarea type="text" id="search-doctor-filter" placeholder="Search Doctor Email..."></textarea>									
+				<textarea id="search-doctor-filter" placeholder="Search Doctor Email..."></textarea>									
 			</div>
 		
 			<div class="logout-container"
@@ -68,7 +68,7 @@
 			</div>
 
 			<div class="sidebar-options" onclick="loadAppointments()">
-				<i class="fa-solid fa-kit-medical"></i>
+				<i class="fa-solid fa-calendar-check"></i>
 				<p>Appointments</p>
 			</div>
 
